<?xml version="1.0" encoding="utf-8"?>
<TextView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/recipe_ingredients_header_view_title"
    style="@style/AppTheme.RecipeOverview.IngredientsHeader"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="4dp"
    android:text="@string/recipe_ingredients_header_view_text" />
